src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.App {
  text-align: center;
  display: flex;
  flex-direction: column;
  font-size: calc(10px + 2vmin);
  font-family: sans-serif;
  height: 100vh;
  width: 100vw;
}

.MuiTypography-h5 {
  font-size: 0.9rem !important;
}

.css-1y942vo-MuiButtonBase-root-MuiButton-root {
  display: none !important;
  ;
}

.spinner {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.error {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  color: red;
}

.control-wrapper {
  margin-top: 80px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 60px;
  padding: 4px;
}

.css-dmmspl-MuiFormGroup-root {
  display: flex !important;
  flex-direction: row !important;
}

.iHAfmq {
  width: calc(100% - 50px) !important;
  justify-content: center !important;
}
.App-header {
  height: 600px;
}
.bwgQCB {
  width: calc(100% - 30px) !important;
}
.MuiPaper-elevation1 {
  width: 100% !important;
  display: flex !important;
  justify-content: center !important;
}
.bar-chart {
  display: flex;
  width: 100vw;
  justify-content: center;
  align-items: center;
}

.Component-root-1 {
  margin-top: 20px !important;
}

h1 {
  font-size: 16px;
}

.khvUfi {
  background-color: #fff !important;
  opacity: 0.7 !important;
  color: #1776D1 !important;
  font-size: 1.2em !important;
}

.khvUfi:hover {
  background-color: #1776D1 !important;
  color: #fff !important;
}

.jJOCMs {
  height: 320px !important;
  margin-top: 30px !important;
}

.jJKuoL {
  box-shadow: 0 0 1px 3px #1776d1 !important;
  background-color: #fff !important;
}

.css-1t29gy6-MuiToolbar-root {
  background: #9DB8D8 !important;
}

@media only screen and (min-width: 768px) {
  .App {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    font-size: calc(10px + 2vmin);
    font-family: sans-serif;
    height: 100vh;
    width: 100vw;
  }
  .spinner {
    background-repeat: no-repeat;
    background-size: 100% 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
  }
  .error {
    background-repeat: no-repeat;
    background-size: 100% 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    font-size: 50px;
    color: red;
  }
  .App-header {
    margin-top: 50px;
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    align-items: center;
    width: 900px;
    height: 600px;
  }
  .weather-card {
    width: 250px;
    height: 210px;
    background: transparent;
    border-radius: 5px;
    border: 1px solid rgba(2, 2, 2, 0.384);
    cursor: pointer;
  }
  .control-wrapper {
    margin-top: 80px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 60px;
    padding: 4px;
    width: 765px;
  }
  .radio {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 30px;
    width: 250px;
    color: #000;
  }
  .select-dropdown {
    min-width: 130px;
  }
  .bwgQCB {
    width: 100% !important;
  }
  .css-vqmohf-MuiButtonBase-root-MuiRadio-root.Mui-checked {
    color: #5192DB !important;
  }
  .css-1pkfx9i-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root {
    height: 100%;
  }
  .css-dmmspl-MuiFormGroup-root {
    display: inline;
    justify-content: space-between;
  }
  .khvUfi {
    background-color: #fff !important;
    opacity: 0.7 !important;
    color: #000 !important;
    font-size: 1.2em !important;
  }
  .iHAfmq {
    justify-content: center !important;
  }
  .khvUfi:hover {
    background-color: #000 !important;
    color: #fff !important;
  }
  .eRmJbc:disabled {
    font-size: 1.2em !important;
  }
  .jJKuoL {
    background-color: #fff !important;
    box-shadow: 0 0 1px 3px #000 !important;
  }
  .weather-card-wrapper {
    position: relative;
    width: 100%;
    height: 100%;
  }
  .weather-card-gif {
    opacity: 0.8;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
  .description {
    color: #333;
    font-size: 20px;
    position: absolute;
    top: 20px;
    left: 0;
    width: 100%;
    text-transform: capitalize;
  }
  .temperture {
    color: #333;
    font-size: 20px;
    position: absolute;
    top: 80px;
    left: 0;
    width: 100%;
  }
  .date {
    color: #333;
    font-size: 18px;
    position: absolute;
    top: 150px;
    left: 0;
    width: 100%;
  }
  .Component-root-1 {
    width: 780px !important;
    height: 400px !important;
  }
  .jss8 {
    width: 780px !important;
    height: 400px !important;

  }
  .jss9 {
    font-size: 16px !important;
  }
  .css-irk9ju {
    border: 1px solid #c4c4c4 !important;
    color: #000 !important;
  }
  .css-irk9ju:hover {
    border: 1px solid #000 !important;
  }
  .buPiXl {
    background: #c4c4c4 !important;
  }
  .buPiXl:hover {
    background: #9DB8D8 !important;
  }
  .cjDndS {
    background: #fff !important;
    box-shadow: #9DB8D8 !important;
  }
  svg rect {
    fill: #9DB8D8 !important;
  }
  .bar-chart {
    margin-top: 20px
  }
  .Title-root-2 {
    color: #333 !important;
    font-size: 14px !important;
  }
  .css-1t29gy6-MuiToolbar-root {
    background: #9DB8D8 !important;
  }
}

